// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render failed state form for authenticating with multi option 1`] = `
.c7 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: rgba(255,98,87,0.1);
  border: 2px solid #FF6257;
  border-radius: 8px;
  box-shadow: none;
  justify-content: normal;
  width: 100%;
}

.c7 a {
  color: #FFFFFF;
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  padding: 24px;
  width: 512px;
}

.c2 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c3 {
  box-sizing: border-box;
}

.c8 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c12 {
  box-sizing: border-box;
  max-width: 50%;
  margin-bottom: 16px;
  margin-right: 16px;
  width: 100%;
}

.c15 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 40px;
  font-size: 14px;
  line-height: 20px;
  letter-spacing: 0.175px;
  width: 100%;
}

.c15:focus-visible,
.teleport-button__force-focus-visible .c15 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c15:hover,
.teleport-button__force-hover .c15 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.20), 0px 5px 8px 0px rgba(0,0,0,0.14), 0px 1px 14px 0px rgba(0,0,0,0.12);
}

.c15:active,
.teleport-button__force-active .c15 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c15:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255,255,255,0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px rgba(0,0,0,0.14),0px 1px 18px rgba(0,0,0,0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  color: rgba(255,255,255,0.72);
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 18px;
  line-height: 32px;
  margin: 0px;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 16px;
  color: rgba(255,255,255,0.72);
}

.c10 {
  appearance: none;
  border: 1px solid rgba(255,255,255,0.54);
  border-radius: 4px;
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background: #222C59;
  color: #FFFFFF;
  margin-top: 4px;
}

.c10:hover,
.c10:focus,
.c10:active {
  border: 1px solid rgba(255,255,255,0.72);
}

.c10::-ms-clear {
  display: none;
}

.c10::placeholder {
  color: rgba(255,255,255,0.54);
  opacity: 1;
}

.c10:read-only {
  cursor: not-allowed;
}

.c10:disabled {
  color: rgba(255,255,255,0.36);
  border-color: rgba(255,255,255,0.36);
}

.c9 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 0px;
}

.c13 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 4px;
}

.c11 {
  display: flex;
  align-items: center;
}

.c14 .react-select-container {
  box-sizing: border-box;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: #FFFFFF;
  background-color: transparent;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c14 .react-select__control {
  outline: none;
  min-height: 40px;
  height: fit-content;
  border: 1px solid rgba(255,255,255,0.54);
  border-radius: 4px;
  background-color: transparent;
  box-shadow: none;
}

.c14 .react-select__control .react-select__dropdown-indicator {
  color: rgba(255,255,255,0.54);
}

.c14 .react-select__control:hover,
.c14 .react-select__control:focus,
.c14 .react-select__control:active {
  border: 1px solid rgba(255,255,255,0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c14 .react-select__control:hover .react-select__dropdown-indicator,
.c14 .react-select__control:focus .react-select__dropdown-indicator,
.c14 .react-select__control:active .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c14 .react-select__control .react-select__indicator:hover,
.c14 .react-select__control .react-select__dropdown-indicator:hover,
.c14 .react-select__control .react-select__indicator:focus,
.c14 .react-select__control .react-select__dropdown-indicator:focus,
.c14 .react-select__control .react-select__indicator:active,
.c14 .react-select__control .react-select__dropdown-indicator:active {
  color: #FFFFFF;
}

.c14 .react-select__control--is-focused {
  border-color: rgba(255,255,255,0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c14 .react-select__control--is-focused .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c14 .react-select__single-value {
  color: #FFFFFF;
}

.c14 .react-select__placeholder {
  color: rgba(255,255,255,0.54);
}

.c14 .react-select__multi-value {
  background-color: rgba(255,255,255,0.13);
}

.c14 .react-select__multi-value .react-select__multi-value__label {
  color: #FFFFFF;
  padding: 0 6px;
}

.c14 .react-select__multi-value .react-select__multi-value__remove {
  color: #FFFFFF;
}

.c14 .react-select__multi-value .react-select__multi-value__remove:hover {
  background-color: rgba(255,255,255,0.07);
  color: #FF6257;
}

.c14 .react-select__option:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c14 .react-select__option--is-focused {
  background-color: rgba(255,255,255,0.07);
}

.c14 .react-select__option--is-focused:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c14 .react-select__option--is-selected {
  background-color: rgba(255,255,255,0.13);
  color: inherit;
  font-weight: 500;
}

.c14 .react-select__option--is-selected:hover {
  background-color: rgba(255,255,255,0.13);
}

.c14 .react-select__clear-indicator {
  color: rgba(255,255,255,0.72);
}

.c14 .react-select__clear-indicator:hover,
.c14 .react-select__clear-indicator:focus {
  background-color: rgba(255,255,255,0.07);
}

.c14 .react-select__clear-indicator:hover svg,
.c14 .react-select__clear-indicator:focus svg {
  color: #FF6257;
}

.c14 .react-select__menu {
  margin-top: 0px;
  background-color: #4A5688;
  box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12);
}

.c14 .react-select__menu .react-select__menu-list::-webkit-scrollbar-thumb {
  background: rgba(255,255,255,0.13);
  border-radius: 4px;
}

.c14 .react-select__indicator-separator {
  display: none;
}

.c14 .react-select__loading-indicator {
  display: none;
}

.c14 .react-select__control--is-disabled {
  color: rgba(255,255,255,0.36);
  border: 1px solid rgba(255,255,255,0.36);
}

.c14 .react-select__control--is-disabled .react-select__single-value,
.c14 .react-select__control--is-disabled .react-select__placeholder {
  color: rgba(255,255,255,0.36);
}

.c14 .react-select__control--is-disabled .react-select__indicator {
  color: rgba(255,255,255,0.36);
}

.c14 .react-select__input {
  color: #FFFFFF;
}

<form
  class="c0 c1"
  width="512px"
>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
        color="text.slightlyMuted"
      >
        Step 
        1
         of 
        3
      </div>
      <div
        class="c5"
      >
        Password Recovery
      </div>
    </div>
  </div>
  <div
    class="c6"
    color="text.slightlyMuted"
  >
    Verify your identity using your multi-factor device.
  </div>
  <div
    class="c7"
    kind="outline-danger"
    width="100%"
  >
    error message
  </div>
  <div
    class="c8"
  >
    <label
      class="c9"
    >
      Username
      <input
        autocomplete="off"
        class="c10"
        inputmode="text"
        readonly=""
        type="text"
        value="joe@example.com"
      />
    </label>
  </div>
  <div
    class="c3 c11"
  >
    <div
      class="c12"
      width="100%"
    >
      <label
        class="c13"
        for="select"
      >
        Multi-Factor Type
      </label>
      <div
        class="c14"
      >
        <div
          class="react-select-container css-2b097c-container"
        >
          <div
            class="react-select__control css-yk16xz-control"
          >
            <div
              class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
            >
              <div
                class="react-select__single-value css-1uccc91-singleValue"
              >
                Passkey or Security Key
              </div>
              <input
                aria-autocomplete="list"
                class="css-62g3xt-dummyInput"
                id="select"
                readonly=""
                tabindex="0"
                value=""
              />
            </div>
            <div
              class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
            >
              <span
                class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="css-6q0nyr-Svg"
                  focusable="false"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    class="c15"
    fill="filled"
    type="submit"
    width="100%"
  >
    Continue
  </button>
</form>
`;

exports[`render failed state form for authenticating with password 1`] = `
.c7 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: rgba(255,98,87,0.1);
  border: 2px solid #FF6257;
  border-radius: 8px;
  box-shadow: none;
  justify-content: normal;
  width: 100%;
}

.c7 a {
  color: #FFFFFF;
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  padding: 24px;
  width: 512px;
}

.c2 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c3 {
  box-sizing: border-box;
}

.c8 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 40px;
  font-size: 14px;
  line-height: 20px;
  letter-spacing: 0.175px;
  width: 100%;
}

.c11:focus-visible,
.teleport-button__force-focus-visible .c11 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c11:hover,
.teleport-button__force-hover .c11 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.20), 0px 5px 8px 0px rgba(0,0,0,0.14), 0px 1px 14px 0px rgba(0,0,0,0.12);
}

.c11:active,
.teleport-button__force-active .c11 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c11:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255,255,255,0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px rgba(0,0,0,0.14),0px 1px 18px rgba(0,0,0,0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  color: rgba(255,255,255,0.72);
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 18px;
  line-height: 32px;
  margin: 0px;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 16px;
  color: rgba(255,255,255,0.72);
}

.c10 {
  appearance: none;
  border: 1px solid rgba(255,255,255,0.54);
  border-radius: 4px;
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background: #222C59;
  color: #FFFFFF;
  margin-top: 4px;
}

.c10:hover,
.c10:focus,
.c10:active {
  border: 1px solid rgba(255,255,255,0.72);
}

.c10::-ms-clear {
  display: none;
}

.c10::placeholder {
  color: rgba(255,255,255,0.54);
  opacity: 1;
}

.c10:read-only {
  cursor: not-allowed;
}

.c10:disabled {
  color: rgba(255,255,255,0.36);
  border-color: rgba(255,255,255,0.36);
}

.c9 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 0px;
}

<form
  class="c0 c1"
  width="512px"
>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
        color="text.slightlyMuted"
      >
        Step 
        1
         of 
        4
      </div>
      <div
        class="c5"
      >
        Multi-Factor Device Recovery
      </div>
    </div>
  </div>
  <div
    class="c6"
    color="text.slightlyMuted"
  >
    Verify your identity using your password.
  </div>
  <div
    class="c7"
    kind="outline-danger"
    width="100%"
  >
    wrong password
  </div>
  <div
    class="c8"
  >
    <label
      class="c9"
    >
      Username
      <input
        autocomplete="off"
        class="c10"
        inputmode="text"
        readonly=""
        type="text"
        value="joe@example.com"
      />
    </label>
  </div>
  <div
    class="c8"
  >
    <label
      class="c9"
    >
      Password
      <input
        autocomplete="off"
        class="c10"
        inputmode="text"
        placeholder="Password"
        type="password"
        value=""
      />
    </label>
  </div>
  <button
    class="c11"
    fill="filled"
    type="submit"
    width="100%"
  >
    Continue
  </button>
</form>
`;

exports[`render failed state form for authenticating with totp 1`] = `
.c7 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: rgba(255,98,87,0.1);
  border: 2px solid #FF6257;
  border-radius: 8px;
  box-shadow: none;
  justify-content: normal;
  width: 100%;
}

.c7 a {
  color: #FFFFFF;
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  padding: 24px;
  width: 512px;
}

.c2 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c3 {
  box-sizing: border-box;
}

.c8 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c12 {
  box-sizing: border-box;
  max-width: 50%;
  margin-bottom: 16px;
  margin-right: 16px;
  width: 100%;
}

.c15 {
  box-sizing: border-box;
  margin-bottom: 16px;
  width: 50%;
}

.c16 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 40px;
  font-size: 14px;
  line-height: 20px;
  letter-spacing: 0.175px;
  width: 100%;
}

.c16:focus-visible,
.teleport-button__force-focus-visible .c16 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c16:hover,
.teleport-button__force-hover .c16 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.20), 0px 5px 8px 0px rgba(0,0,0,0.14), 0px 1px 14px 0px rgba(0,0,0,0.12);
}

.c16:active,
.teleport-button__force-active .c16 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c16:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255,255,255,0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px rgba(0,0,0,0.14),0px 1px 18px rgba(0,0,0,0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  color: rgba(255,255,255,0.72);
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 18px;
  line-height: 32px;
  margin: 0px;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 16px;
  color: rgba(255,255,255,0.72);
}

.c10 {
  appearance: none;
  border: 1px solid rgba(255,255,255,0.54);
  border-radius: 4px;
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background: #222C59;
  color: #FFFFFF;
  margin-top: 4px;
}

.c10:hover,
.c10:focus,
.c10:active {
  border: 1px solid rgba(255,255,255,0.72);
}

.c10::-ms-clear {
  display: none;
}

.c10::placeholder {
  color: rgba(255,255,255,0.54);
  opacity: 1;
}

.c10:read-only {
  cursor: not-allowed;
}

.c10:disabled {
  color: rgba(255,255,255,0.36);
  border-color: rgba(255,255,255,0.36);
}

.c9 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 0px;
}

.c13 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 4px;
}

.c11 {
  display: flex;
  align-items: center;
}

.c14 .react-select-container {
  box-sizing: border-box;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: #FFFFFF;
  background-color: transparent;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c14 .react-select__control {
  outline: none;
  min-height: 40px;
  height: fit-content;
  border: 1px solid rgba(255,255,255,0.54);
  border-radius: 4px;
  background-color: transparent;
  box-shadow: none;
}

.c14 .react-select__control .react-select__dropdown-indicator {
  color: rgba(255,255,255,0.54);
}

.c14 .react-select__control:hover,
.c14 .react-select__control:focus,
.c14 .react-select__control:active {
  border: 1px solid rgba(255,255,255,0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c14 .react-select__control:hover .react-select__dropdown-indicator,
.c14 .react-select__control:focus .react-select__dropdown-indicator,
.c14 .react-select__control:active .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c14 .react-select__control .react-select__indicator:hover,
.c14 .react-select__control .react-select__dropdown-indicator:hover,
.c14 .react-select__control .react-select__indicator:focus,
.c14 .react-select__control .react-select__dropdown-indicator:focus,
.c14 .react-select__control .react-select__indicator:active,
.c14 .react-select__control .react-select__dropdown-indicator:active {
  color: #FFFFFF;
}

.c14 .react-select__control--is-focused {
  border-color: rgba(255,255,255,0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c14 .react-select__control--is-focused .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c14 .react-select__single-value {
  color: #FFFFFF;
}

.c14 .react-select__placeholder {
  color: rgba(255,255,255,0.54);
}

.c14 .react-select__multi-value {
  background-color: rgba(255,255,255,0.13);
}

.c14 .react-select__multi-value .react-select__multi-value__label {
  color: #FFFFFF;
  padding: 0 6px;
}

.c14 .react-select__multi-value .react-select__multi-value__remove {
  color: #FFFFFF;
}

.c14 .react-select__multi-value .react-select__multi-value__remove:hover {
  background-color: rgba(255,255,255,0.07);
  color: #FF6257;
}

.c14 .react-select__option:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c14 .react-select__option--is-focused {
  background-color: rgba(255,255,255,0.07);
}

.c14 .react-select__option--is-focused:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c14 .react-select__option--is-selected {
  background-color: rgba(255,255,255,0.13);
  color: inherit;
  font-weight: 500;
}

.c14 .react-select__option--is-selected:hover {
  background-color: rgba(255,255,255,0.13);
}

.c14 .react-select__clear-indicator {
  color: rgba(255,255,255,0.72);
}

.c14 .react-select__clear-indicator:hover,
.c14 .react-select__clear-indicator:focus {
  background-color: rgba(255,255,255,0.07);
}

.c14 .react-select__clear-indicator:hover svg,
.c14 .react-select__clear-indicator:focus svg {
  color: #FF6257;
}

.c14 .react-select__menu {
  margin-top: 0px;
  background-color: #4A5688;
  box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12);
}

.c14 .react-select__menu .react-select__menu-list::-webkit-scrollbar-thumb {
  background: rgba(255,255,255,0.13);
  border-radius: 4px;
}

.c14 .react-select__indicator-separator {
  display: none;
}

.c14 .react-select__loading-indicator {
  display: none;
}

.c14 .react-select__control--is-disabled {
  color: rgba(255,255,255,0.36);
  border: 1px solid rgba(255,255,255,0.36);
}

.c14 .react-select__control--is-disabled .react-select__single-value,
.c14 .react-select__control--is-disabled .react-select__placeholder {
  color: rgba(255,255,255,0.36);
}

.c14 .react-select__control--is-disabled .react-select__indicator {
  color: rgba(255,255,255,0.36);
}

.c14 .react-select__input {
  color: #FFFFFF;
}

<form
  class="c0 c1"
  width="512px"
>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
        color="text.slightlyMuted"
      >
        Step 
        1
         of 
        3
      </div>
      <div
        class="c5"
      >
        Password Recovery
      </div>
    </div>
  </div>
  <div
    class="c6"
    color="text.slightlyMuted"
  >
    Verify your identity using your authenticator app.
  </div>
  <div
    class="c7"
    kind="outline-danger"
    width="100%"
  >
    wrong totp token
  </div>
  <div
    class="c8"
  >
    <label
      class="c9"
    >
      Username
      <input
        autocomplete="off"
        class="c10"
        inputmode="text"
        readonly=""
        type="text"
        value="joe@example.com"
      />
    </label>
  </div>
  <div
    class="c3 c11"
  >
    <div
      class="c12"
      width="100%"
    >
      <label
        class="c13"
        for="select"
      >
        Multi-Factor Type
      </label>
      <div
        class="c14"
      >
        <div
          class="react-select-container css-2b097c-container"
        >
          <div
            class="react-select__control css-yk16xz-control"
          >
            <div
              class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
            >
              <div
                class="react-select__single-value css-1uccc91-singleValue"
              >
                Authenticator App
              </div>
              <input
                aria-autocomplete="list"
                class="css-62g3xt-dummyInput"
                id="select"
                readonly=""
                tabindex="0"
                value=""
              />
            </div>
            <div
              class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
            >
              <span
                class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="css-6q0nyr-Svg"
                  focusable="false"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c15"
      width="50%"
    >
      <label
        class="c9"
      >
        Authenticator Code
        <input
          autocomplete="one-time-code"
          class="c10"
          inputmode="numeric"
          placeholder="123 456"
          type="text"
          value=""
        />
      </label>
    </div>
  </div>
  <button
    class="c16"
    fill="filled"
    type="submit"
    width="100%"
  >
    Continue
  </button>
</form>
`;

exports[`render failed state form for authenticating with webauthn 1`] = `
.c7 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: rgba(255,98,87,0.1);
  border: 2px solid #FF6257;
  border-radius: 8px;
  box-shadow: none;
  justify-content: normal;
  width: 100%;
}

.c7 a {
  color: #FFFFFF;
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  padding: 24px;
  width: 512px;
}

.c2 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c3 {
  box-sizing: border-box;
}

.c8 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c12 {
  box-sizing: border-box;
  max-width: 50%;
  margin-bottom: 16px;
  margin-right: 16px;
  width: 100%;
}

.c15 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 40px;
  font-size: 14px;
  line-height: 20px;
  letter-spacing: 0.175px;
  width: 100%;
}

.c15:focus-visible,
.teleport-button__force-focus-visible .c15 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c15:hover,
.teleport-button__force-hover .c15 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.20), 0px 5px 8px 0px rgba(0,0,0,0.14), 0px 1px 14px 0px rgba(0,0,0,0.12);
}

.c15:active,
.teleport-button__force-active .c15 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c15:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255,255,255,0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px rgba(0,0,0,0.14),0px 1px 18px rgba(0,0,0,0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  color: rgba(255,255,255,0.72);
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 18px;
  line-height: 32px;
  margin: 0px;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 16px;
  color: rgba(255,255,255,0.72);
}

.c10 {
  appearance: none;
  border: 1px solid rgba(255,255,255,0.54);
  border-radius: 4px;
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background: #222C59;
  color: #FFFFFF;
  margin-top: 4px;
}

.c10:hover,
.c10:focus,
.c10:active {
  border: 1px solid rgba(255,255,255,0.72);
}

.c10::-ms-clear {
  display: none;
}

.c10::placeholder {
  color: rgba(255,255,255,0.54);
  opacity: 1;
}

.c10:read-only {
  cursor: not-allowed;
}

.c10:disabled {
  color: rgba(255,255,255,0.36);
  border-color: rgba(255,255,255,0.36);
}

.c9 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 0px;
}

.c13 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 4px;
}

.c11 {
  display: flex;
  align-items: center;
}

.c14 .react-select-container {
  box-sizing: border-box;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: #FFFFFF;
  background-color: transparent;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c14 .react-select__control {
  outline: none;
  min-height: 40px;
  height: fit-content;
  border: 1px solid rgba(255,255,255,0.54);
  border-radius: 4px;
  background-color: transparent;
  box-shadow: none;
}

.c14 .react-select__control .react-select__dropdown-indicator {
  color: rgba(255,255,255,0.54);
}

.c14 .react-select__control:hover,
.c14 .react-select__control:focus,
.c14 .react-select__control:active {
  border: 1px solid rgba(255,255,255,0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c14 .react-select__control:hover .react-select__dropdown-indicator,
.c14 .react-select__control:focus .react-select__dropdown-indicator,
.c14 .react-select__control:active .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c14 .react-select__control .react-select__indicator:hover,
.c14 .react-select__control .react-select__dropdown-indicator:hover,
.c14 .react-select__control .react-select__indicator:focus,
.c14 .react-select__control .react-select__dropdown-indicator:focus,
.c14 .react-select__control .react-select__indicator:active,
.c14 .react-select__control .react-select__dropdown-indicator:active {
  color: #FFFFFF;
}

.c14 .react-select__control--is-focused {
  border-color: rgba(255,255,255,0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c14 .react-select__control--is-focused .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c14 .react-select__single-value {
  color: #FFFFFF;
}

.c14 .react-select__placeholder {
  color: rgba(255,255,255,0.54);
}

.c14 .react-select__multi-value {
  background-color: rgba(255,255,255,0.13);
}

.c14 .react-select__multi-value .react-select__multi-value__label {
  color: #FFFFFF;
  padding: 0 6px;
}

.c14 .react-select__multi-value .react-select__multi-value__remove {
  color: #FFFFFF;
}

.c14 .react-select__multi-value .react-select__multi-value__remove:hover {
  background-color: rgba(255,255,255,0.07);
  color: #FF6257;
}

.c14 .react-select__option:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c14 .react-select__option--is-focused {
  background-color: rgba(255,255,255,0.07);
}

.c14 .react-select__option--is-focused:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c14 .react-select__option--is-selected {
  background-color: rgba(255,255,255,0.13);
  color: inherit;
  font-weight: 500;
}

.c14 .react-select__option--is-selected:hover {
  background-color: rgba(255,255,255,0.13);
}

.c14 .react-select__clear-indicator {
  color: rgba(255,255,255,0.72);
}

.c14 .react-select__clear-indicator:hover,
.c14 .react-select__clear-indicator:focus {
  background-color: rgba(255,255,255,0.07);
}

.c14 .react-select__clear-indicator:hover svg,
.c14 .react-select__clear-indicator:focus svg {
  color: #FF6257;
}

.c14 .react-select__menu {
  margin-top: 0px;
  background-color: #4A5688;
  box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12);
}

.c14 .react-select__menu .react-select__menu-list::-webkit-scrollbar-thumb {
  background: rgba(255,255,255,0.13);
  border-radius: 4px;
}

.c14 .react-select__indicator-separator {
  display: none;
}

.c14 .react-select__loading-indicator {
  display: none;
}

.c14 .react-select__control--is-disabled {
  color: rgba(255,255,255,0.36);
  border: 1px solid rgba(255,255,255,0.36);
}

.c14 .react-select__control--is-disabled .react-select__single-value,
.c14 .react-select__control--is-disabled .react-select__placeholder {
  color: rgba(255,255,255,0.36);
}

.c14 .react-select__control--is-disabled .react-select__indicator {
  color: rgba(255,255,255,0.36);
}

.c14 .react-select__input {
  color: #FFFFFF;
}

<form
  class="c0 c1"
  width="512px"
>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
        color="text.slightlyMuted"
      >
        Step 
        1
         of 
        3
      </div>
      <div
        class="c5"
      >
        Password Recovery
      </div>
    </div>
  </div>
  <div
    class="c6"
    color="text.slightlyMuted"
  >
    Verify your identity using your passkey or security key.
  </div>
  <div
    class="c7"
    kind="outline-danger"
    width="100%"
  >
    invalid device
  </div>
  <div
    class="c8"
  >
    <label
      class="c9"
    >
      Username
      <input
        autocomplete="off"
        class="c10"
        inputmode="text"
        readonly=""
        type="text"
        value="joe@example.com"
      />
    </label>
  </div>
  <div
    class="c3 c11"
  >
    <div
      class="c12"
      width="100%"
    >
      <label
        class="c13"
        for="select"
      >
        Multi-Factor Type
      </label>
      <div
        class="c14"
      >
        <div
          class="react-select-container css-2b097c-container"
        >
          <div
            class="react-select__control css-yk16xz-control"
          >
            <div
              class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
            >
              <div
                class="react-select__single-value css-1uccc91-singleValue"
              >
                Passkey or Security Key
              </div>
              <input
                aria-autocomplete="list"
                class="css-62g3xt-dummyInput"
                id="select"
                readonly=""
                tabindex="0"
                value=""
              />
            </div>
            <div
              class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
            >
              <span
                class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="css-6q0nyr-Svg"
                  focusable="false"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    class="c15"
    fill="filled"
    type="submit"
    width="100%"
  >
    Continue
  </button>
</form>
`;

exports[`render form for authenticating with multi option 1`] = `
.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  padding: 24px;
  width: 512px;
}

.c2 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c3 {
  box-sizing: border-box;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c11 {
  box-sizing: border-box;
  max-width: 50%;
  margin-bottom: 16px;
  margin-right: 16px;
  width: 100%;
}

.c14 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 40px;
  font-size: 14px;
  line-height: 20px;
  letter-spacing: 0.175px;
  width: 100%;
}

.c14:focus-visible,
.teleport-button__force-focus-visible .c14 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c14:hover,
.teleport-button__force-hover .c14 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.20), 0px 5px 8px 0px rgba(0,0,0,0.14), 0px 1px 14px 0px rgba(0,0,0,0.12);
}

.c14:active,
.teleport-button__force-active .c14 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c14:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255,255,255,0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px rgba(0,0,0,0.14),0px 1px 18px rgba(0,0,0,0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  color: rgba(255,255,255,0.72);
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 18px;
  line-height: 32px;
  margin: 0px;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 16px;
  color: rgba(255,255,255,0.72);
}

.c9 {
  appearance: none;
  border: 1px solid rgba(255,255,255,0.54);
  border-radius: 4px;
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background: #222C59;
  color: #FFFFFF;
  margin-top: 4px;
}

.c9:hover,
.c9:focus,
.c9:active {
  border: 1px solid rgba(255,255,255,0.72);
}

.c9::-ms-clear {
  display: none;
}

.c9::placeholder {
  color: rgba(255,255,255,0.54);
  opacity: 1;
}

.c9:read-only {
  cursor: not-allowed;
}

.c9:disabled {
  color: rgba(255,255,255,0.36);
  border-color: rgba(255,255,255,0.36);
}

.c8 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 0px;
}

.c12 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 4px;
}

.c10 {
  display: flex;
  align-items: center;
}

.c13 .react-select-container {
  box-sizing: border-box;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: #FFFFFF;
  background-color: transparent;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c13 .react-select__control {
  outline: none;
  min-height: 40px;
  height: fit-content;
  border: 1px solid rgba(255,255,255,0.54);
  border-radius: 4px;
  background-color: transparent;
  box-shadow: none;
}

.c13 .react-select__control .react-select__dropdown-indicator {
  color: rgba(255,255,255,0.54);
}

.c13 .react-select__control:hover,
.c13 .react-select__control:focus,
.c13 .react-select__control:active {
  border: 1px solid rgba(255,255,255,0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c13 .react-select__control:hover .react-select__dropdown-indicator,
.c13 .react-select__control:focus .react-select__dropdown-indicator,
.c13 .react-select__control:active .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c13 .react-select__control .react-select__indicator:hover,
.c13 .react-select__control .react-select__dropdown-indicator:hover,
.c13 .react-select__control .react-select__indicator:focus,
.c13 .react-select__control .react-select__dropdown-indicator:focus,
.c13 .react-select__control .react-select__indicator:active,
.c13 .react-select__control .react-select__dropdown-indicator:active {
  color: #FFFFFF;
}

.c13 .react-select__control--is-focused {
  border-color: rgba(255,255,255,0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c13 .react-select__control--is-focused .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c13 .react-select__single-value {
  color: #FFFFFF;
}

.c13 .react-select__placeholder {
  color: rgba(255,255,255,0.54);
}

.c13 .react-select__multi-value {
  background-color: rgba(255,255,255,0.13);
}

.c13 .react-select__multi-value .react-select__multi-value__label {
  color: #FFFFFF;
  padding: 0 6px;
}

.c13 .react-select__multi-value .react-select__multi-value__remove {
  color: #FFFFFF;
}

.c13 .react-select__multi-value .react-select__multi-value__remove:hover {
  background-color: rgba(255,255,255,0.07);
  color: #FF6257;
}

.c13 .react-select__option:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c13 .react-select__option--is-focused {
  background-color: rgba(255,255,255,0.07);
}

.c13 .react-select__option--is-focused:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c13 .react-select__option--is-selected {
  background-color: rgba(255,255,255,0.13);
  color: inherit;
  font-weight: 500;
}

.c13 .react-select__option--is-selected:hover {
  background-color: rgba(255,255,255,0.13);
}

.c13 .react-select__clear-indicator {
  color: rgba(255,255,255,0.72);
}

.c13 .react-select__clear-indicator:hover,
.c13 .react-select__clear-indicator:focus {
  background-color: rgba(255,255,255,0.07);
}

.c13 .react-select__clear-indicator:hover svg,
.c13 .react-select__clear-indicator:focus svg {
  color: #FF6257;
}

.c13 .react-select__menu {
  margin-top: 0px;
  background-color: #4A5688;
  box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12);
}

.c13 .react-select__menu .react-select__menu-list::-webkit-scrollbar-thumb {
  background: rgba(255,255,255,0.13);
  border-radius: 4px;
}

.c13 .react-select__indicator-separator {
  display: none;
}

.c13 .react-select__loading-indicator {
  display: none;
}

.c13 .react-select__control--is-disabled {
  color: rgba(255,255,255,0.36);
  border: 1px solid rgba(255,255,255,0.36);
}

.c13 .react-select__control--is-disabled .react-select__single-value,
.c13 .react-select__control--is-disabled .react-select__placeholder {
  color: rgba(255,255,255,0.36);
}

.c13 .react-select__control--is-disabled .react-select__indicator {
  color: rgba(255,255,255,0.36);
}

.c13 .react-select__input {
  color: #FFFFFF;
}

<form
  class="c0 c1"
  width="512px"
>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
        color="text.slightlyMuted"
      >
        Step 
        1
         of 
        3
      </div>
      <div
        class="c5"
      >
        Password Recovery
      </div>
    </div>
  </div>
  <div
    class="c6"
    color="text.slightlyMuted"
  >
    Verify your identity using your multi-factor device.
  </div>
  <div
    class="c7"
  >
    <label
      class="c8"
    >
      Username
      <input
        autocomplete="off"
        class="c9"
        inputmode="text"
        readonly=""
        type="text"
        value="joe@example.com"
      />
    </label>
  </div>
  <div
    class="c3 c10"
  >
    <div
      class="c11"
      width="100%"
    >
      <label
        class="c12"
        for="select"
      >
        Multi-Factor Type
      </label>
      <div
        class="c13"
      >
        <div
          class="react-select-container css-2b097c-container"
        >
          <div
            class="react-select__control css-yk16xz-control"
          >
            <div
              class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
            >
              <div
                class="react-select__single-value css-1uccc91-singleValue"
              >
                Passkey or Security Key
              </div>
              <input
                aria-autocomplete="list"
                class="css-62g3xt-dummyInput"
                id="select"
                readonly=""
                tabindex="0"
                value=""
              />
            </div>
            <div
              class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
            >
              <span
                class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="css-6q0nyr-Svg"
                  focusable="false"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    class="c14"
    fill="filled"
    type="submit"
    width="100%"
  >
    Continue
  </button>
</form>
`;

exports[`render form for authenticating with password to recover mfa device 1`] = `
.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  padding: 24px;
  width: 512px;
}

.c2 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c3 {
  box-sizing: border-box;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c10 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 40px;
  font-size: 14px;
  line-height: 20px;
  letter-spacing: 0.175px;
  width: 100%;
}

.c10:focus-visible,
.teleport-button__force-focus-visible .c10 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c10:hover,
.teleport-button__force-hover .c10 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.20), 0px 5px 8px 0px rgba(0,0,0,0.14), 0px 1px 14px 0px rgba(0,0,0,0.12);
}

.c10:active,
.teleport-button__force-active .c10 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c10:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255,255,255,0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px rgba(0,0,0,0.14),0px 1px 18px rgba(0,0,0,0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  color: rgba(255,255,255,0.72);
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 18px;
  line-height: 32px;
  margin: 0px;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 16px;
  color: rgba(255,255,255,0.72);
}

.c9 {
  appearance: none;
  border: 1px solid rgba(255,255,255,0.54);
  border-radius: 4px;
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background: #222C59;
  color: #FFFFFF;
  margin-top: 4px;
}

.c9:hover,
.c9:focus,
.c9:active {
  border: 1px solid rgba(255,255,255,0.72);
}

.c9::-ms-clear {
  display: none;
}

.c9::placeholder {
  color: rgba(255,255,255,0.54);
  opacity: 1;
}

.c9:read-only {
  cursor: not-allowed;
}

.c9:disabled {
  color: rgba(255,255,255,0.36);
  border-color: rgba(255,255,255,0.36);
}

.c8 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 0px;
}

<form
  class="c0 c1"
  width="512px"
>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
        color="text.slightlyMuted"
      >
        Step 
        1
         of 
        4
      </div>
      <div
        class="c5"
      >
        Multi-Factor Device Recovery
      </div>
    </div>
  </div>
  <div
    class="c6"
    color="text.slightlyMuted"
  >
    Verify your identity using your password.
  </div>
  <div
    class="c7"
  >
    <label
      class="c8"
    >
      Username
      <input
        autocomplete="off"
        class="c9"
        inputmode="text"
        readonly=""
        type="text"
        value="joe@example.com"
      />
    </label>
  </div>
  <div
    class="c7"
  >
    <label
      class="c8"
    >
      Password
      <input
        autocomplete="off"
        class="c9"
        inputmode="text"
        placeholder="Password"
        type="password"
        value=""
      />
    </label>
  </div>
  <button
    class="c10"
    fill="filled"
    type="submit"
    width="100%"
  >
    Continue
  </button>
</form>
`;

exports[`render form for authenticating with totp 1`] = `
.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  padding: 24px;
  width: 512px;
}

.c2 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c3 {
  box-sizing: border-box;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c11 {
  box-sizing: border-box;
  max-width: 50%;
  margin-bottom: 16px;
  margin-right: 16px;
  width: 100%;
}

.c14 {
  box-sizing: border-box;
  margin-bottom: 16px;
  width: 50%;
}

.c15 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 40px;
  font-size: 14px;
  line-height: 20px;
  letter-spacing: 0.175px;
  width: 100%;
}

.c15:focus-visible,
.teleport-button__force-focus-visible .c15 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c15:hover,
.teleport-button__force-hover .c15 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.20), 0px 5px 8px 0px rgba(0,0,0,0.14), 0px 1px 14px 0px rgba(0,0,0,0.12);
}

.c15:active,
.teleport-button__force-active .c15 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c15:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255,255,255,0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px rgba(0,0,0,0.14),0px 1px 18px rgba(0,0,0,0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  color: rgba(255,255,255,0.72);
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 18px;
  line-height: 32px;
  margin: 0px;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 16px;
  color: rgba(255,255,255,0.72);
}

.c9 {
  appearance: none;
  border: 1px solid rgba(255,255,255,0.54);
  border-radius: 4px;
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background: #222C59;
  color: #FFFFFF;
  margin-top: 4px;
}

.c9:hover,
.c9:focus,
.c9:active {
  border: 1px solid rgba(255,255,255,0.72);
}

.c9::-ms-clear {
  display: none;
}

.c9::placeholder {
  color: rgba(255,255,255,0.54);
  opacity: 1;
}

.c9:read-only {
  cursor: not-allowed;
}

.c9:disabled {
  color: rgba(255,255,255,0.36);
  border-color: rgba(255,255,255,0.36);
}

.c8 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 0px;
}

.c12 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 4px;
}

.c10 {
  display: flex;
  align-items: center;
}

.c13 .react-select-container {
  box-sizing: border-box;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: #FFFFFF;
  background-color: transparent;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c13 .react-select__control {
  outline: none;
  min-height: 40px;
  height: fit-content;
  border: 1px solid rgba(255,255,255,0.54);
  border-radius: 4px;
  background-color: transparent;
  box-shadow: none;
}

.c13 .react-select__control .react-select__dropdown-indicator {
  color: rgba(255,255,255,0.54);
}

.c13 .react-select__control:hover,
.c13 .react-select__control:focus,
.c13 .react-select__control:active {
  border: 1px solid rgba(255,255,255,0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c13 .react-select__control:hover .react-select__dropdown-indicator,
.c13 .react-select__control:focus .react-select__dropdown-indicator,
.c13 .react-select__control:active .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c13 .react-select__control .react-select__indicator:hover,
.c13 .react-select__control .react-select__dropdown-indicator:hover,
.c13 .react-select__control .react-select__indicator:focus,
.c13 .react-select__control .react-select__dropdown-indicator:focus,
.c13 .react-select__control .react-select__indicator:active,
.c13 .react-select__control .react-select__dropdown-indicator:active {
  color: #FFFFFF;
}

.c13 .react-select__control--is-focused {
  border-color: rgba(255,255,255,0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c13 .react-select__control--is-focused .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c13 .react-select__single-value {
  color: #FFFFFF;
}

.c13 .react-select__placeholder {
  color: rgba(255,255,255,0.54);
}

.c13 .react-select__multi-value {
  background-color: rgba(255,255,255,0.13);
}

.c13 .react-select__multi-value .react-select__multi-value__label {
  color: #FFFFFF;
  padding: 0 6px;
}

.c13 .react-select__multi-value .react-select__multi-value__remove {
  color: #FFFFFF;
}

.c13 .react-select__multi-value .react-select__multi-value__remove:hover {
  background-color: rgba(255,255,255,0.07);
  color: #FF6257;
}

.c13 .react-select__option:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c13 .react-select__option--is-focused {
  background-color: rgba(255,255,255,0.07);
}

.c13 .react-select__option--is-focused:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c13 .react-select__option--is-selected {
  background-color: rgba(255,255,255,0.13);
  color: inherit;
  font-weight: 500;
}

.c13 .react-select__option--is-selected:hover {
  background-color: rgba(255,255,255,0.13);
}

.c13 .react-select__clear-indicator {
  color: rgba(255,255,255,0.72);
}

.c13 .react-select__clear-indicator:hover,
.c13 .react-select__clear-indicator:focus {
  background-color: rgba(255,255,255,0.07);
}

.c13 .react-select__clear-indicator:hover svg,
.c13 .react-select__clear-indicator:focus svg {
  color: #FF6257;
}

.c13 .react-select__menu {
  margin-top: 0px;
  background-color: #4A5688;
  box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12);
}

.c13 .react-select__menu .react-select__menu-list::-webkit-scrollbar-thumb {
  background: rgba(255,255,255,0.13);
  border-radius: 4px;
}

.c13 .react-select__indicator-separator {
  display: none;
}

.c13 .react-select__loading-indicator {
  display: none;
}

.c13 .react-select__control--is-disabled {
  color: rgba(255,255,255,0.36);
  border: 1px solid rgba(255,255,255,0.36);
}

.c13 .react-select__control--is-disabled .react-select__single-value,
.c13 .react-select__control--is-disabled .react-select__placeholder {
  color: rgba(255,255,255,0.36);
}

.c13 .react-select__control--is-disabled .react-select__indicator {
  color: rgba(255,255,255,0.36);
}

.c13 .react-select__input {
  color: #FFFFFF;
}

<form
  class="c0 c1"
  width="512px"
>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
        color="text.slightlyMuted"
      >
        Step 
        1
         of 
        3
      </div>
      <div
        class="c5"
      >
        Password Recovery
      </div>
    </div>
  </div>
  <div
    class="c6"
    color="text.slightlyMuted"
  >
    Verify your identity using your authenticator app.
  </div>
  <div
    class="c7"
  >
    <label
      class="c8"
    >
      Username
      <input
        autocomplete="off"
        class="c9"
        inputmode="text"
        readonly=""
        type="text"
        value="joe@example.com"
      />
    </label>
  </div>
  <div
    class="c3 c10"
  >
    <div
      class="c11"
      width="100%"
    >
      <label
        class="c12"
        for="select"
      >
        Multi-Factor Type
      </label>
      <div
        class="c13"
      >
        <div
          class="react-select-container css-2b097c-container"
        >
          <div
            class="react-select__control css-yk16xz-control"
          >
            <div
              class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
            >
              <div
                class="react-select__single-value css-1uccc91-singleValue"
              >
                Authenticator App
              </div>
              <input
                aria-autocomplete="list"
                class="css-62g3xt-dummyInput"
                id="select"
                readonly=""
                tabindex="0"
                value=""
              />
            </div>
            <div
              class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
            >
              <span
                class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="css-6q0nyr-Svg"
                  focusable="false"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c14"
      width="50%"
    >
      <label
        class="c8"
      >
        Authenticator Code
        <input
          autocomplete="one-time-code"
          class="c9"
          inputmode="numeric"
          placeholder="123 456"
          type="text"
          value=""
        />
      </label>
    </div>
  </div>
  <button
    class="c15"
    fill="filled"
    type="submit"
    width="100%"
  >
    Continue
  </button>
</form>
`;

exports[`render form for authenticating with webauthn 1`] = `
.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  padding: 24px;
  width: 512px;
}

.c2 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c3 {
  box-sizing: border-box;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c11 {
  box-sizing: border-box;
  max-width: 50%;
  margin-bottom: 16px;
  margin-right: 16px;
  width: 100%;
}

.c14 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 40px;
  font-size: 14px;
  line-height: 20px;
  letter-spacing: 0.175px;
  width: 100%;
}

.c14:focus-visible,
.teleport-button__force-focus-visible .c14 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c14:hover,
.teleport-button__force-hover .c14 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.20), 0px 5px 8px 0px rgba(0,0,0,0.14), 0px 1px 14px 0px rgba(0,0,0,0.12);
}

.c14:active,
.teleport-button__force-active .c14 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c14:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255,255,255,0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px rgba(0,0,0,0.14),0px 1px 18px rgba(0,0,0,0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  color: rgba(255,255,255,0.72);
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 18px;
  line-height: 32px;
  margin: 0px;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 16px;
  color: rgba(255,255,255,0.72);
}

.c9 {
  appearance: none;
  border: 1px solid rgba(255,255,255,0.54);
  border-radius: 4px;
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background: #222C59;
  color: #FFFFFF;
  margin-top: 4px;
}

.c9:hover,
.c9:focus,
.c9:active {
  border: 1px solid rgba(255,255,255,0.72);
}

.c9::-ms-clear {
  display: none;
}

.c9::placeholder {
  color: rgba(255,255,255,0.54);
  opacity: 1;
}

.c9:read-only {
  cursor: not-allowed;
}

.c9:disabled {
  color: rgba(255,255,255,0.36);
  border-color: rgba(255,255,255,0.36);
}

.c8 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 0px;
}

.c12 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 4px;
}

.c10 {
  display: flex;
  align-items: center;
}

.c13 .react-select-container {
  box-sizing: border-box;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: #FFFFFF;
  background-color: transparent;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c13 .react-select__control {
  outline: none;
  min-height: 40px;
  height: fit-content;
  border: 1px solid rgba(255,255,255,0.54);
  border-radius: 4px;
  background-color: transparent;
  box-shadow: none;
}

.c13 .react-select__control .react-select__dropdown-indicator {
  color: rgba(255,255,255,0.54);
}

.c13 .react-select__control:hover,
.c13 .react-select__control:focus,
.c13 .react-select__control:active {
  border: 1px solid rgba(255,255,255,0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c13 .react-select__control:hover .react-select__dropdown-indicator,
.c13 .react-select__control:focus .react-select__dropdown-indicator,
.c13 .react-select__control:active .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c13 .react-select__control .react-select__indicator:hover,
.c13 .react-select__control .react-select__dropdown-indicator:hover,
.c13 .react-select__control .react-select__indicator:focus,
.c13 .react-select__control .react-select__dropdown-indicator:focus,
.c13 .react-select__control .react-select__indicator:active,
.c13 .react-select__control .react-select__dropdown-indicator:active {
  color: #FFFFFF;
}

.c13 .react-select__control--is-focused {
  border-color: rgba(255,255,255,0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c13 .react-select__control--is-focused .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c13 .react-select__single-value {
  color: #FFFFFF;
}

.c13 .react-select__placeholder {
  color: rgba(255,255,255,0.54);
}

.c13 .react-select__multi-value {
  background-color: rgba(255,255,255,0.13);
}

.c13 .react-select__multi-value .react-select__multi-value__label {
  color: #FFFFFF;
  padding: 0 6px;
}

.c13 .react-select__multi-value .react-select__multi-value__remove {
  color: #FFFFFF;
}

.c13 .react-select__multi-value .react-select__multi-value__remove:hover {
  background-color: rgba(255,255,255,0.07);
  color: #FF6257;
}

.c13 .react-select__option:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c13 .react-select__option--is-focused {
  background-color: rgba(255,255,255,0.07);
}

.c13 .react-select__option--is-focused:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c13 .react-select__option--is-selected {
  background-color: rgba(255,255,255,0.13);
  color: inherit;
  font-weight: 500;
}

.c13 .react-select__option--is-selected:hover {
  background-color: rgba(255,255,255,0.13);
}

.c13 .react-select__clear-indicator {
  color: rgba(255,255,255,0.72);
}

.c13 .react-select__clear-indicator:hover,
.c13 .react-select__clear-indicator:focus {
  background-color: rgba(255,255,255,0.07);
}

.c13 .react-select__clear-indicator:hover svg,
.c13 .react-select__clear-indicator:focus svg {
  color: #FF6257;
}

.c13 .react-select__menu {
  margin-top: 0px;
  background-color: #4A5688;
  box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12);
}

.c13 .react-select__menu .react-select__menu-list::-webkit-scrollbar-thumb {
  background: rgba(255,255,255,0.13);
  border-radius: 4px;
}

.c13 .react-select__indicator-separator {
  display: none;
}

.c13 .react-select__loading-indicator {
  display: none;
}

.c13 .react-select__control--is-disabled {
  color: rgba(255,255,255,0.36);
  border: 1px solid rgba(255,255,255,0.36);
}

.c13 .react-select__control--is-disabled .react-select__single-value,
.c13 .react-select__control--is-disabled .react-select__placeholder {
  color: rgba(255,255,255,0.36);
}

.c13 .react-select__control--is-disabled .react-select__indicator {
  color: rgba(255,255,255,0.36);
}

.c13 .react-select__input {
  color: #FFFFFF;
}

<form
  class="c0 c1"
  width="512px"
>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
        color="text.slightlyMuted"
      >
        Step 
        1
         of 
        3
      </div>
      <div
        class="c5"
      >
        Password Recovery
      </div>
    </div>
  </div>
  <div
    class="c6"
    color="text.slightlyMuted"
  >
    Verify your identity using your passkey or security key.
  </div>
  <div
    class="c7"
  >
    <label
      class="c8"
    >
      Username
      <input
        autocomplete="off"
        class="c9"
        inputmode="text"
        readonly=""
        type="text"
        value="joe@example.com"
      />
    </label>
  </div>
  <div
    class="c3 c10"
  >
    <div
      class="c11"
      width="100%"
    >
      <label
        class="c12"
        for="select"
      >
        Multi-Factor Type
      </label>
      <div
        class="c13"
      >
        <div
          class="react-select-container css-2b097c-container"
        >
          <div
            class="react-select__control css-yk16xz-control"
          >
            <div
              class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
            >
              <div
                class="react-select__single-value css-1uccc91-singleValue"
              >
                Passkey or Security Key
              </div>
              <input
                aria-autocomplete="list"
                class="css-62g3xt-dummyInput"
                id="select"
                readonly=""
                tabindex="0"
                value=""
              />
            </div>
            <div
              class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
            >
              <span
                class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="css-6q0nyr-Svg"
                  focusable="false"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    class="c14"
    fill="filled"
    type="submit"
    width="100%"
  >
    Continue
  </button>
</form>
`;
